# mcp-simple-browser-crawl4ai-searXNG

./: .env.example  README.md  docker-compose.dev.yml  docker-compose.yml  example_output_searxng.json  simple_browser_mcp_backend.md  test.sh  test_crawl4ai.sh  test_searxng.sh  update_searxng_conf.sh
crawl4ai/: Dockerfile  crawl4ai_service.py  pyproject.toml
gpt-oss-mcp-server/: README.md  build-system-prompt.py  pyproject.toml  python_server.py
mcp-browser/: Dockerfile  browser_server.py  pyproject.toml
mcp-browser/tests/: get_tools.py
mcp-browser/tools/simple_browser/: __init__.py  backend.py  page_contents.py  simple_browser_tool.py
searxng/: settings.yml  settings.yml.bak
